# s3-platform-plugin-template

./: .gitignore  LICENSE  README.md  SPPfile  SPPfile.default.sample  SPPfile.general  all_commands.md  config.py  payload_parser.py  plugin.xml  pyproject.toml  pytest.ini  readme.md  readme.parser.md  ref_name_payload.py  requirements.txt  source_parser.py  spp_document.py
.github/workflows/: build-release.yml  plugin_test.yml  sync-release.yml
src/s3_platform_plugin_template/: config.py  template_payload.py
tests/: dev.logger.conf  test_plugin_readme.py  test_plugin_root_file.py  test_plugin_root_files.py
tests/config/: fixtures.py  test_base.py  test_compliance_config.py  test_config.py
tests/fixtures/: payload_class.py  plugin_manifest.py
tests/payload/: fixtures.py  test_plugin_run.py
